Fix jumping page

--- a/_sass/layout/_header.scss
+++ b/_sass/layout/_header.scss
@@ -32,6 +32,10 @@
     padding-bottom: 16px;
   }
 
+  .header__open-button {
+    display: flex;
+  }
+
   .header__mobile-activator--open:checked {
     ~ .header__nav {
       display: flex;
